--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 tld<0.11; python_version < '3.0'
 tld; python_version >= '3.0'
 flanker>=0.9.0
-easyimap>=0.6.1
+# easyimap>=0.6.1
+git+https://github.com/zerklabs/easyimap@master#egg=easyimap
